# e-sports-semantic-search

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: super-linter.yml
alembic/: env.py
alembic/versions/: 0001_create_table.py  0002_update_champion_table.py  0003_update_player_table_schema.py
e_sports_semantic_search/: config.py  db.py  main.py
e_sports_semantic_search/models/: __init__.py  champion.py  game.py  league.py  match.py  player.py  player_stats.py  team.py  team_stats.py  tournament.py
scripts/: fetch_champion_data.py  fetch_league_data.py  fetch_match_data.py  fetch_player_data.py  fetch_team_data.py  fetch_tournament_data.py
