[tool.poetry]
name = "e-sports-semantic-search"
version = "0.1.0"
description = "e스포츠 시맨틱 검색"
authors = ["Taehun Kim <kth3321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gradio = "^4.10.0"
llama-index = "^0.9.15.post2"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
sqlalchemy = "^2.0.23"
pymongo = { extras = ["srv"], version = "^4.6.1" }
openai = "^1.4.0"
alembic = "^1.13.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
types-requests = "^2.31.0.20231231"
psycopg2 = "^2.9.9"
pyarrow = "^15.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.982"
httpx = "^0.23.1"
types-requests = "^2.28.11.8"
pylint = "^2.16.2"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
ignore_missing_imports = true
exclude = [".venv"]

[tool.ruff]
line-length = 120
